--- a/moviemanager/templates/moviemanager/add_movies.html
+++ b/moviemanager/templates/moviemanager/add_movies.html
@@ -1,4 +1,5 @@
 {% extends "layout.html" %}
+{% block pagetitle %}Add Movies{% endblock %}
 {% block content %}
     <ul>
     {% for movie in movies %}
