--- a/templates/layout.html
+++ b/templates/layout.html
@@ -2,7 +2,7 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title>MovieMan</title>
+    <title>MovieMan :: {% block pagetitle %}Untitled Page{% endblock %}</title>
 </head>
 <body>
 {% block content %}{% endblock %}
