--- a/templates/layout.html
+++ b/templates/layout.html
@@ -2,9 +2,12 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css">
     <title>MovieMan :: {% block pagetitle %}Untitled Page{% endblock %}</title>
 </head>
 <body>
-{% block content %}{% endblock %}
+    <div class="container">
+    {% block content %}{% endblock %}
+    </div>
 </body>
 </html>
