--- a/templates/layout.html
+++ b/templates/layout.html
@@ -8,6 +8,7 @@
 <body>
     <div class="container">
     {% block content %}{% endblock %}
+    {% include "footer.html" %}
     </div>
 </body>
 </html>
