--- a/moviemanager/templates/moviemanager/add_movies.html
+++ b/moviemanager/templates/moviemanager/add_movies.html
@@ -1,11 +1,18 @@
 {% extends "layout.html" %}
 {% load humanize %}
+{% block headextra %}
+<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/lightbox2/2.7.1/js/lightbox.min.js"></script>
+<link type="text/css" rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/lightbox2/2.7.1/css/lightbox.css">
+{% endblock %}
 {% block pagetitle %}Add Movies{% endblock %}
 {% block content %}
     {% for movie in movies %}
         <div class="row">
             <div class="two columns">
-                <img src="https://image.tmdb.org/t/p/w185{{ movie.poster_path }}" width="100%">
+                <a href="https://image.tmdb.org/t/p/w396{{ movie.poster_path }}" data-lightbox="movie-cover" data-title="{{ movie.title }}">
+                    <img src="https://image.tmdb.org/t/p/w185{{ movie.poster_path }}" width="100%">
+                </a>
             </div>
             <div class="ten columns">
                 <strong>{{ movie.title }}</strong><br />
