--- a/templates/layout.html
+++ b/templates/layout.html
@@ -2,7 +2,8 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css">
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css">
+    {% block headextra %}{% endblock %}
     <title>MovieMan :: {% block pagetitle %}Untitled Page{% endblock %}</title>
 </head>
 <body>
