--- a/templates/layout.html
+++ b/templates/layout.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <div class="container">
+    {% include "header.html" %}
     {% block content %}{% endblock %}
     {% include "footer.html" %}
     </div>
