--- a/moviemanager/templates/moviemanager/list_saved_movies.html
+++ b/moviemanager/templates/moviemanager/list_saved_movies.html
@@ -1,6 +1,6 @@
 {% extends "moviemanager/movie_list.html" %}
 {% load humanize %}
-{% block pagetitle %}Add Movies{% endblock %}
+{% block pagetitle %}Saved Movies{% endblock %}
 {% block movie_info %}
     <strong>{{ movie.title }}</strong> <em>{{ movie.score }}</em><br />
     {{ movie.vote_average }}/10.0 ({{ movie.vote_count }} votes)<br />
