--- a/movieman2/templates/moviemanager/list_saved_movies.html
+++ b/movieman2/templates/moviemanager/list_saved_movies.html
@@ -2,7 +2,7 @@
 {% load humanize %}
 {% block pagetitle %}Saved Movies{% endblock %}
 {% block movie_info %}
-    <strong>{{ movie.title }}</strong> <em>{{ movie.score }}</em><br />
+    <a href="{% url 'show_movie' movie.tmdb_id %}"><strong>{{ movie.title }}</strong> <em>{{ movie.score }}</em></a><br />
     {{ movie.vote_average }}/10.0 ({{ movie.vote_count }} votes)<br />
     Release date: {{ movie.release_date|naturalday }}<br />
     #{{ movie.tmdb_id|intcomma }}
